--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 Getting Started:
 the project is working off the latest OpenFrameworks develop branch
 https://github.com/openframeworks/openFrameworks.git develop
@@ -9,15 +8,15 @@ https://github.com/openframeworks/openFrameworks.git develop
 
  	open up terminal
   	cd to the place where you want to install openFrameworks
-	
+
 	git clone https://github.com/openframeworks/openFrameworks.git
 
 	cd openFrameworks/
 
 	git fetch origin develop
-	
+
 	git checkout origin/develop
-	
+
 	git checkout develop
 
 
@@ -26,8 +25,6 @@ https://github.com/openframeworks/openFrameworks.git develop
 # -----------------------------------------------------------
  	
 	from openFrameworks/
-   	
-	cd to apps/
 
    	mkdir projects
    
@@ -44,10 +41,11 @@ https://github.com/openframeworks/openFrameworks.git develop
 # ----------------------------------------------------------- 
 # Updating
 # -----------------------------------------------------------
-   git pull
+   	
+	from openFrameworks/projects/TheHelloCube
+	
+	git pull
    
-   git submodule init
+   	git submodule init
    
-   git submodule update
-
-
+   	git submodule update
